[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Loading Screens/WLB Poster.png" type="Texture" id=2]
[ext_resource path="res://Themes/MainMenu_Bottom_Row_Buttons.theme" type="Theme" id=3]
[ext_resource path="res://Shaders/Smoke/fogShaderMaterial.tres" type="Material" id=4]
[ext_resource path="res://Assets/Audio/BackgroundMusic/Did Not You Promise Me.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/BackgroundMusic/Start Game.wav" type="AudioStream" id=6]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -554, 117 )
script = ExtResource( 1 )

[node name="SmokeTransition" type="ColorRect" parent="."]
pause_mode = 2
material = ExtResource( 4 )
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.337255, 0.337255, 0.337255, 1 )

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = -44.0
margin_right = 813.0
margin_bottom = 671.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.736
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
theme = ExtResource( 3 )

[node name="Continue" type="LinkButton" parent="VBoxContainer"]
margin_left = 64.0
margin_top = 59.0
margin_right = 206.0
margin_bottom = 117.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 0.909804, 0.909804, 0.909804, 1 )
enabled_focus_mode = 0
text = "Continue"
underline = 2

[node name="StartNewGame" type="LinkButton" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 270.0
margin_bottom = 298.0
size_flags_horizontal = 6
size_flags_vertical = 6
enabled_focus_mode = 0
text = "Start New Game"
underline = 2

[node name="Quit" type="LinkButton" parent="VBoxContainer"]
margin_left = 98.0
margin_top = 422.0
margin_right = 171.0
margin_bottom = 480.0
size_flags_horizontal = 6
size_flags_vertical = 6
enabled_focus_mode = 0
text = "Quit"
underline = 2

[node name="StartGameButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SoundEffect"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Loading" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/StartNewGame" to="." method="_on_StartNewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="tween_completed" from="Loading" to="." method="_on_Loading_tween_completed"]
